--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -36,7 +40,7 @@ android {
     }
 
     buildFeatures {
-        viewBinding = true
+        dataBinding true
     }
 }
 
@@ -49,16 +53,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation  'androidx.activity:activity-ktx:1.2.3'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.activity:activity-ktx:1.2.3'
 
     //Retrofit
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
 
     // RxJava + RxAndroid
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
@@ -88,18 +89,23 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
-    testImplementation 'org.mockito:mockito-core:2.24.5'
-    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
-    androidTestImplementation 'androidx.test:core:1.3.0'
+    //unit testing,mockito
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito:mockito-inline:2.9.0'
 
     // Testing Kotlin
     testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
 
     //Hilt Testing
     kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
     testImplementation 'com.google.dagger:hilt-android-testing:2.35'
 
+    androidTestImplementation 'org.mockito:mockito-android:2.25.0'
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
